--- a/index.html
+++ b/index.html
@@ -3,29 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Welcome to My Page</title>
+  <title>The Neuromancer Package</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background-color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #ff77e9, #8ec5fc);
+      background-attachment: fixed;
+      font-family: 'Press Start 2P', monospace;
+      color: #fff;
+      text-shadow: 2px 2px #000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
     }
+
     h1 {
-      color: #2c3e50;
+      font-size: 1.5rem;
+      margin-bottom: 2rem;
+      animation: flicker 1.5s infinite alternate;
     }
+
     p {
-      color: #555;
+      font-size: 0.75rem;
+      max-width: 600px;
+      text-align: center;
+      padding: 0 20px;
     }
-    a {
-      color: #3498db;
-      text-decoration: none;
+
+    @keyframes flicker {
+      from { opacity: 1; }
+      to { opacity: 0.6; }
     }
   </style>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <p>This is my first webpage hosted with GitHub Pages.</p>
-  <p>Created by <strong>You</strong> 🚀</p>
+  <h1>THE NEUROMANCER PACKAGE</h1>
+  <p>IF YOU WISH TO EXPERIENCE MORE JOURNEYS LIKE THIS,<br>
+  PURCHASE THE <strong>NEUROMANCER REKAL PACKAGE</strong>.</p>
 </body>
 </html>
