--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #ff77e9, #8ec5fc);
+      background: linear-gradient(135deg, #1a0033, #2b0040);
       background-attachment: fixed;
       font-family: 'Press Start 2P', monospace;
-      color: #fff;
+      color: #ff99cc;
       text-shadow: 2px 2px #000;
       display: flex;
       flex-direction: column;
@@ -34,11 +34,30 @@
       max-width: 600px;
       text-align: center;
       padding: 0 20px;
+      margin-bottom: 2rem;
+    }
+
+    .button {
+      background-color: transparent;
+      color: #ff99cc;
+      border: 2px solid #ff99cc;
+      padding: 10px 20px;
+      font-size: 0.75rem;
+      font-family: 'Press Start 2P', monospace;
+      text-decoration: none;
+      text-align: center;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .button:hover {
+      background-color: #ff99cc;
+      color: #1a0033;
     }
 
     @keyframes flicker {
       from { opacity: 1; }
-      to { opacity: 0.6; }
+      to { opacity: 0.7; }
     }
   </style>
 </head>
@@ -46,5 +65,6 @@
   <h1>THE NEUROMANCER PACKAGE</h1>
   <p>IF YOU WISH TO EXPERIENCE MORE JOURNEYS LIKE THIS,<br>
   PURCHASE THE <strong>NEUROMANCER REKAL PACKAGE</strong>.</p>
+  <a class="button" href="#">PURCHASE PACKAGE</a>
 </body>
 </html>
