--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      padding: 60px 20px 20px 20px;
     }
 
     p {
       font-size: 0.75rem;
       max-width: 600px;
       text-align: center;
-      margin: 30px 0;
+      margin: 40px 0;
+      line-height: 1.75;
     }
 
     .button {
