--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
   <header>
     <h1>THE NEUROMANCER PACKAGE</h1>
-    <marquee behavior="scroll" direction="left">☁️ Welcome to the SimStim Interface — Rekal guarantees memories so vivid, they’ll overwrite your soul ☁️</marquee>
+    <marquee behavior="scroll" direction="left">☁️ Welcome to the Neuromancer Rekal Landing Page — This package guarantees memories so vivid, they’ll overwrite your SOUL ☁️</marquee>
   </header>
 
   <main>
