--- a/index.html
+++ b/index.html
@@ -81,8 +81,12 @@
   </header>
 
   <main>
+    <p><em>The Neuromancer Package isn’t just a memory—it’s a synthetic thrillstream.</em><br>
+    <em>Engineered for edgewalkers and digital drifters, this is Rekal’s most exhilarating, high-fidelity experience yet.</em></p>
+
     <p>IF YOU WISH TO EXPERIENCE MORE JOURNEYS LIKE THIS,<br>
     PURCHASE THE <strong>NEUROMANCER REKAL PACKAGE</strong>.</p>
+    
     <button class="button" onclick="causeError()">PURCHASE PACKAGE</button>
   </main>
 
