--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
   </header>
 
   <main>
-    <p><em>The Neuromancer Package isn’t just a memory—it’s a synthetic thrillstream.</em><br>
+    <p><em>The Neuromancer Package isn’t just a memory, it’s a synthetic thrillstream.</em><br>
     <em>Engineered for edgewalkers and digital drifters, this is Rekal’s most exhilarating, high-fidelity experience yet.</em></p>
 
-    <p><strong>Unlike other Rekal packages</strong>, this experience challenges both your mind and your senses. Embedded with cryptic puzzles, shifting narratives, and pulse-pounding sequences, it was designed for those who crave stimulation and satisfaction in equal measure. If you thought memory implants were just passive reruns of someone else's past—think again.</p>
+    <p><strong>Unlike other Rekal packages</strong>, this experience challenges both your mind and your senses. Embedded with cryptic puzzles, shifting narratives, and pulse-pounding sequences, it was designed for those who crave stimulation and satisfaction in equal measure. If you thought memory implants were just passive reruns of someone else's past, think again.</p>
 
     <p>IF YOU WISH TO EXPERIENCE MORE JOURNEYS LIKE THIS,<br>
     PURCHASE THE <strong>NEUROMANCER REKAL PACKAGE</strong>.</p>
